--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
+        <link rel="stylesheet" href="styles.css">
         <title>Your Name - Personal Portfolio</title>
     </head>
 <body>
 
     <header>
         <h1>Dexter Capillan</h1>
-        <p>Web Developer</p>
+        <p>A Web Developer!</p>
+        <p>Kung Hindi Papalarin, Asawa nalang ni kwash</p>
     </header>
 
     <section id="about-me">
